--- a/public/notes.html
+++ b/public/notes.html
@@ -12,7 +12,7 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="/public/assets/css/style.css" />
   </head>
 
   <body>
@@ -28,19 +28,16 @@
         <div class="col-4 list-container">
           <div class="card">
             <ul class="list-group"></ul>
-          </div>
         </div>
-        <div class="col-8">
-          <input
-            class="note-title"
-            placeholder="Note Title"
-            maxlength="28"
-            type="text"
-          />
-          <textarea class="note-textarea" placeholder="Note Text"></textarea>
-        </div>
-      </div>
     </div>
-    <script src="/assets/js/index.js"></script>
+          <div class="col-8">
+    <input class="note-title" placeholder="Note Title" maxlength="28" type="text" />
+    <textarea class="note-textarea" placeholder="Note Text"></textarea>
+  </div>
+  
+    </div>
+    <script src="/public/assets/js/index.js"></script>
   </body>
 </html>
+
+
