--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,6 @@
       <a class="btn btn-primary btn-lg mt-4" href="/notes.html" role="button">Get Started</a>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
   <script src="/public/assets/js/index.js"></script>
 </html>
