--- a/public/notes.html
+++ b/public/notes.html
@@ -37,6 +37,7 @@
   </div>
 
     </div>
-    <script src="/public/assets/js/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
+  <script src="/public/assets/js/index.js"></script>
   </body>
 </html>
